fix(pinterest): fix quick save contrast on latte

--- a/styles/pinterest/catppuccin.user.css
+++ b/styles/pinterest/catppuccin.user.css
@@ -493,6 +493,15 @@
       }
     }
 
+    div.tBJ.dyH.iFc.sAJ.xnr.zDA.IZT.H2s,
+    a.Wk9.CCY.S9z.eEj.kVc.xQ4.uCz {
+      color: if((@lookup = latte), @mantle, @text) !important;
+    }
+
+    div[data-test-id="boardSelectionDropdown"] & svg.gUZ.PLa.U9O.kVc > path {
+      fill: if((@lookup = latte), @mantle, @text) !important;
+    }
+
     /** Mobile **/
 
     div.CCY.S9z.INd.Tbt.L4E.e8F.BG7 & div.INd.hA-.wYR.zI7.iyn.Hsu {
@@ -623,6 +632,13 @@
       &
       div.Jea.MIw.QLY.Rym.mQ8.ojN.p6V.zI7.iyn.Hsu {
       background-color: transparent !important;
+    }
+
+    button.ope.ujU.e43.adn.BG7.CCY.zHr.qJc {
+      background-color: @mantle !important;
+      & div {
+        color: @text !important;
+      }
     }
 
     /** Mobile **/
